buildscript {
  dependencies {
    classpath "org.flywaydb:flyway-database-postgresql:13.2.0"
  }
}

plugins {
  id 'application'
  id 'checkstyle'
  id 'pmd'
  id 'jacoco'
  id 'io.spring.dependency-management' version '1.1.7'
  id 'org.springframework.boot' version '4.1.0'
  id 'io.github.ben-manes.versions' version '0.59.0'
  id 'org.flywaydb.flyway' version '13.2.0'
  id 'org.sonarqube' version '7.3.1.8318'
  id 'org.owasp.dependencycheck' version '12.2.2'
  id 'uk.gov.hmcts.java' version '0.12.70'
  id 'net.serenity-bdd.serenity-gradle-plugin' version '5.3.9'
}

application {
  mainClass = 'uk.gov.hmcts.reform.laubackend.eud.Application'
  group = 'uk.gov.hmcts.reform'
  version = '0.0.1'
}

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(25)
  }
}

def configureSourceSet(String name) {
  sourceSets.create(name) { sourceSet ->
    sourceSet.java {
      compileClasspath += sourceSets.main.output + sourceSets.test.output
      runtimeClasspath += sourceSets.main.output + sourceSets.test.output
      srcDir "src/${name}/java"
    }
    resources.srcDir "src/${name}/resources"
  }
}

['smokeTest', 'integrationTest', 'functionalTest'].each { configureSourceSet(it) }

configurations {
  functionalTestImplementation.extendsFrom testImplementation
  functionalTestRuntimeOnly.extendsFrom runtimeOnly

  integrationTestImplementation.extendsFrom testImplementation
  integrationTestRuntimeOnly.extendsFrom runtimeOnly

  smokeTestImplementation.extendsFrom testImplementation
  smokeTestRuntimeOnly.extendsFrom runtimeOnly
}

tasks.withType(JavaCompile).configureEach {
  options.compilerArgs << "-Xlint:unchecked" << "-Werror"
}

tasks.withType(JavaExec).configureEach {
  javaLauncher.set(javaToolchains.launcherFor(java.toolchain))
}

tasks.withType(Test).configureEach {
  useJUnitPlatform()
  failFast = true

  testLogging {
    exceptionFormat = 'full'
  }
}

tasks.register('functional', Test) {
  description = "Runs functional tests"
  group = "Verification"
  testClassesDirs = sourceSets.functionalTest.output.classesDirs
  classpath = sourceSets.functionalTest.runtimeClasspath
}

tasks.register('integration', Test) {
  description = "Runs integration tests"
  group = "Verification"
  testClassesDirs = sourceSets.integrationTest.output.classesDirs
  classpath = sourceSets.integrationTest.runtimeClasspath
  mustRunAfter test
  failFast = true
}

tasks.register('smoke', Test) {
  description = "Runs Smoke Tests"
  group = "Verification"
  testClassesDirs = sourceSets.smokeTest.output.classesDirs
  classpath = sourceSets.smokeTest.runtimeClasspath
}

task fortifyScan(type: JavaExec)  {
  mainClass = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
  classpath += sourceSets.test.runtimeClasspath
  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
}

jacocoTestReport {
  executionData(test, integration)
  reports {
    xml.getRequired().set(true)
    csv.getRequired().set(false)
    html.getRequired().set(true)
  }
}

tasks.sonarqube.dependsOn(jacocoTestReport)
tasks.check.dependsOn(integration)

sonarqube {
  properties {
    property "sonar.projectName", "Reform :: lau-eud-backend"
    property "sonar.projectKey", "uk.gov.hmcts.reform:lau-eud-backend"
    property "sonar.sources", "src/main/java"
    property "sonar.tests", "src/test/java,src/smokeTest/java,src/functionalTest/java,src/integrationTest/java"
  }
}

// before committing a change, make sure task still works
dependencyUpdates {
  def isNonStable = { String version ->
    def stableKeyword = ['RELEASE', 'FINAL', 'GA'].any { qualifier -> version.toUpperCase().contains(qualifier) }
    def regex = /^[0-9,.v-]+$/
    return !stableKeyword && !(version ==~ regex)
  }
  rejectVersionIf { selection -> // <---- notice how the closure argument is named
    return isNonStable(selection.candidate.version) && !isNonStable(selection.currentVersion)
  }
}

// https://jeremylong.github.io/DependencyCheck/dependency-check-gradle/configuration.html
dependencyCheck {
  suppressionFile = 'config/owasp/suppressions.xml'
}

dependencyManagement {
  imports {
    mavenBom "com.azure.spring:spring-cloud-azure-dependencies:7.3.0"
    mavenBom "org.springframework.cloud:spring-cloud-dependencies:2025.1.2"
  }
}

repositories {
  mavenLocal()
  mavenCentral()
  maven {
    url = uri('https://pkgs.dev.azure.com/hmcts/Artifacts/_packaging/hmcts-lib/maven/v1')
  }
}

def versions = [
  flywaydb          : '13.2.0',
  lombok            : '1.18.46',
  // Keep these aligned (Cucumber ↔ JUnit ↔ JUnit Platform) to avoid classpath conflicts.
  cucumber          : '7.34.6',
  junit             : '6.0.3',
  junitPlatform     : '6.1.3',
  log4j             : '2.26.1',
  logback           : '1.6.1',
  serenity          : '5.3.11',
  testcontainers    : '2.0.5',
]

// review with every spring upgrade
ext['tomcat.version'] = '11.0.24'
ext['netty.version'] = '4.2.16.Final'

dependencies {
  implementation "com.azure.spring:spring-cloud-azure-starter-servicebus"
  implementation "com.azure.spring:spring-messaging-azure-servicebus"
  implementation "org.springframework.boot:spring-boot-starter-webmvc"
  implementation "org.springframework.boot:spring-boot-starter-actuator"
  implementation "org.springframework.boot:spring-boot-starter-json"
  implementation "org.springframework.boot:spring-boot-starter-data-jpa"
  implementation "org.springframework.boot:spring-boot-starter-flyway"
  implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:3.1.0"
  implementation "org.springframework.cloud:spring-cloud-starter-openfeign"
  implementation "com.github.hmcts:idam-java-client:4.0.0"
  implementation "com.github.hmcts:service-auth-provider-java-client:6.0.1"
  implementation "com.github.hmcts.java-logging:logging:8.0.0"
  implementation "org.apache.commons:commons-lang3:3.20.0"
  implementation "org.apache.logging.log4j:log4j-api:${versions.log4j}"
  implementation "org.apache.logging.log4j:log4j-to-slf4j:${versions.log4j}"
  implementation "ch.qos.logback:logback-classic:${versions.logback}"
  implementation "ch.qos.logback:logback-core:${versions.logback}"
  implementation "org.flywaydb:flyway-database-postgresql:${versions.flywaydb}"
  implementation "org.postgresql:postgresql:42.7.13"
  implementation "com.warrenstrange:googleauth:1.5.0"
  implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310"

  implementation "org.projectlombok:lombok:${versions.lombok}"
  annotationProcessor "org.projectlombok:lombok:${versions.lombok}"

  testImplementation "org.springframework.boot:spring-boot-starter-test"
  testImplementation "org.springframework.boot:spring-boot-testcontainers"
  testImplementation "io.rest-assured:rest-assured:6.0.1"
  testImplementation "io.rest-assured:rest-assured:6.0.1"
  testImplementation "com.github.hmcts:fortify-client:1.4.10:all"

  //Integration test
  testImplementation "org.wiremock:wiremock-standalone:3.13.2"
  testImplementation "com.google.code.gson:gson:2.14.0"
  testImplementation "org.awaitility:awaitility:4.3.0"
  testImplementation "org.testcontainers:testcontainers:${versions.testcontainers}"
  testImplementation "org.testcontainers:testcontainers-postgresql:${versions.testcontainers}"
  testImplementation "org.testcontainers:junit-jupiter:1.21.4"

  integrationTestImplementation "org.projectlombok:lombok:${versions.lombok}"
  integrationTestAnnotationProcessor "org.projectlombok:lombok:${versions.lombok}"

  integrationTestImplementation "io.cucumber:cucumber-java:${versions.cucumber}"
  integrationTestImplementation "io.cucumber:cucumber-spring:${versions.cucumber}"
  integrationTestImplementation "io.cucumber:cucumber-junit-platform-engine:${versions.cucumber}"
  integrationTestImplementation "org.junit.platform:junit-platform-suite:${versions.junitPlatform}"
  integrationTestImplementation "org.junit.platform:junit-platform-engine:${versions.junitPlatform}"
  integrationTestImplementation "org.junit.platform:junit-platform-commons:${versions.junitPlatform}"
  integrationTestImplementation "org.junit.platform:junit-platform-launcher:${versions.junitPlatform}"
  integrationTestImplementation "org.springframework.boot:spring-boot-starter-webmvc-test"


  //Functional test
  testImplementation "net.serenity-bdd:serenity-core:${versions.serenity}", {
    exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib'
  }
  testImplementation "net.serenity-bdd:serenity-junit5:${versions.serenity}"
  testImplementation "net.serenity-bdd:serenity-rest-assured:${versions.serenity}"
  testImplementation "net.serenity-bdd:serenity-spring:${versions.serenity}"

  functionalTestCompileOnly "org.projectlombok:lombok:${versions.lombok}"
  functionalTestAnnotationProcessor "org.projectlombok:lombok:${versions.lombok}"
}

flyway {
  url = System.getenv('FLYWAY_URL')
  user = System.getenv('FLYWAY_USER')
  password = System.getenv('FLYWAY_PASSWORD')

  if (System.getenv("LAU_EUD_DB_PASSWORD")) {
    placeholders = [
      'LAU_EUD_DB_PASSWORD': System.getenv("LAU_EUD_DB_PASSWORD")
    ]
  }

  baselineOnMigrate = true
  baselineVersion = '000'
}

import org.flywaydb.gradle.task.FlywayMigrateTask
task migratePostgresDatabase(type: FlywayMigrateTask) {
  baselineOnMigrate = true
  if (project.hasProperty("dburl")) {
    url = "jdbc:postgresql://${dburl}"
  }
}

bootJar {
  archiveFileName = "lau-eud-backend.jar"

  manifest {
    attributes('Implementation-Version': project.version.toString())
  }
}

// Gradle 7.x issue, workaround from: https://github.com/gradle/gradle/issues/17236#issuecomment-894768083
rootProject.tasks.named("processSmokeTestResources") {
  duplicatesStrategy = 'include'
}

rootProject.tasks.named('processIntegrationTestResources') {
  duplicatesStrategy = 'include'
}

rootProject.tasks.named('processFunctionalTestResources') {
  duplicatesStrategy = 'include'
}

wrapper {
    distributionType = Wrapper.DistributionType.ALL
}
